tests/baselines/reference/staticClassInitializerUseEnumMemberBeforeDeclaration.errors.txt
tests/cases/compiler/staticClassInitializerUseEnumMemberBeforeDeclaration.ts(2,25): error TS2450: Enum 'Bar' used before its declaration.
tests/cases/compiler/staticClassInitializerUseEnumMemberBeforeDeclaration.ts(2,29): error TS2448: Block-scoped variable 'A' used before its declaration.


==== tests/cases/compiler/staticClassInitializerUseEnumMemberBeforeDeclaration.ts (2 errors) ====
    class Foo {
        public static bar = Bar.A;
                            ~~~
!!! error TS2450: Enum 'Bar' used before its declaration.
                                ~
!!! error TS2448: Block-scoped variable 'A' used before its declaration.
    }
    
    export enum Bar {
        A
    }
    